src/objects/Realisation__c.object
<CustomObject>
    <fields>
        <fullName>Cost_of_realised_investment__c</fullName>
        <label>Cost of realised investment</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Disposal_date__c</fullName>
        <label>Disposal date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Exit_method__c</fullName>
        <label>Exit method</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Trade sale</fullName>
                </value>
                <value>
                    <fullName>IPO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Gross_IRR__c</fullName>
        <label>Gross IRR</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Multiple_to_cost__c</fullName>
        <label>Multiple to cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Percents_of_fund_s_holding_sold__c</fullName>
        <label>Percents of fund&apos;s holding sold</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Portfolio_Company__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Portfolio Company</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Realisations</relationshipLabel>
        <relationshipName>Realisations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Proceeds__c</fullName>
        <label>Proceeds</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Realised_gains_losses__c</fullName>
        <label>Realised gains/losses</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Realisation</label>
    <nameField>
        <label>Realisation Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Realisations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>